# mossco-code

./: .gitignore  .gitlab-ci.yml  .travis.yml  ACKNOWLEDGMENTS  ACKNOWLEDGMENTS.md  AUTHORS  AUTHORS.md  BUGS  BUGS.md  CITATION.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.CCBYSA  LICENSE.md  Makefile  QuickStart.md  README  README.md  pyproject.toml
examples/: CMakeLists.txt  Makefile  README  delft_erosed_example.f90
examples/benthic_geoecology/: .gitignore  Makefile  README.md  toplevel_component.F90
examples/common/: Makefile  README  coupling_system.F90  coupling_system.yaml  main.F90  toplevel_component.F90
examples/constant_fabmsed_netcdf/: .gitignore  Makefile  README.md  toplevel_component.F90
examples/constant_netcdf_concurrent/: Makefile  Makefile.coupling  toplevel_component.F90
examples/erosed/: Makefile  delft_erosed_example.f90
examples/esmf/: Makefile  README
examples/esmf_benthos/: main.F90  toplevel_component.F90
examples/esmf_empty/: Makefile  README  main.F90
examples/esmf_erosed/: Makefile  README  main.F90  toplevel_component.F90
examples/esmf_fabm0d/: Makefile  esmf_toplevel_component.F90  main.F90  run.nml  toplevel_component.F90
examples/esmf_getm/: Makefile  esmf_getm_example
examples/esmf_gotm/: Makefile  esmf_toplevel_component.F90  main.F90  toplevel_component.F90
examples/esmf_gotmfabm/: Makefile  main.F90  toplevel_component.F90
examples/esmf_remtc/: Makefile  README  esmf_toplevel_component.F90  main.F90  ocean_grid.nc  toplevel_component.F90
examples/esmf_sediment/: .gitignore  Makefile  README  esmf_toplevel_component.F90  fabm_sed.nml  main.F90  run.nml  run_sed.nml  toplevel_component.F90
examples/fabm_benthic_pelagic/: .gitignore  Makefile  toplevel_component.F90
examples/fabmgotm_fabmsed_constant/: .gitignore  Makefile  toplevel_component.F90
examples/fabmsed_fabm0d/: Makefile  README  esmf_toplevel_component.F90  fabm_sed.nml  fabmsed_fabm0d  main.F90  run.nml  run_sed.nml  toplevel_component.F90
examples/generic/: .gitignore  1d_reference.yaml  EXAMPLES  Makefile  Makefile.coupling  README  Readme.md  YAMLS  benthic_geoecology.yaml  benthos.yaml  benthos_coupling.yaml  cc.yaml  ce.yaml  clm_coupling.yaml  component_catalog.yaml  constant--constant.yaml  constant--empty--netcdf.yaml  constant--erosed--netcdf.yaml  constant--fabm_sediment.yaml  constant--inout--inout.yaml  constant--regrid--fabm_sediment.yaml  constant--simplewave--erosed.yaml  constant--simplewave.yaml  constant.yaml  constant_constant.yaml  constant_constant_constant.yaml  constant_constant_netcdf.yaml  constant_coupling.yaml  constant_erosed.yaml  constant_fabm0d.yaml  constant_fabm_gotm_erosed.yaml  constant_fabm_sediment.yaml  constant_fabm_sediment_netcdf.yaml  constant_fabmsed_netcdf.yaml  constant_gotm.yaml  constant_netcdf.yaml  constant_simplewave.yaml  constant_simplewave_netcdf.yaml  constant_test_netcdf.yaml  coupling_system.yaml  (+196 more)
examples/getm--fabm_pelagic--netcdf/: .gitignore  Makefile  Makefile.coupling  README.md  toplevel_component.F90
examples/gotmfabm_fabmsed/: Makefile  main.F90  toplevel_component.F90
examples/gotmfabm_fabmsed_constant/: Makefile  main.F90  toplevel_component.F90
examples/gotmfabm_fabmsed_erosed_benthos_wave_constant/: Makefile  toplevel_component.F90
examples/ocean_fabm0d/: Makefile  README  main.F90  plotfabm0d.py  run.nml  toplevel_component.F90
examples/ocean_fabm0d_fabmsed/: Makefile  README  esmf_toplevel_component.F90  fabm.nml  main.F90  run.nml  toplevel_component.F90
examples/ocean_sediment/: Makefile  README  esmf_toplevel_component.F90  main.F90
examples/omexdia_p/: Makefile  fabm_sed.nml  main.F90  plotsed1d.py  solver_library.F90
examples/reference_3d/: .gitignore  Makefile  README.md  toplevel_component.F90
examples/standalone/: Makefile
examples/test/: .gitignore  00_none.yaml  01_none.yaml  03_none.yaml  04_none.yaml  10_empty.yaml  11_empty.yaml  12_empty.yaml  13_empty.yaml  14_empty.yaml  15_empty.yaml  Makefile  test_all_yaml.sh
examples/timing_concept/: Makefile  README  main.F90  mossco_run.nml  mossco_time.F90  toplevel_component.F90
src/: CMakeLists.txt  Makefile  README  Rules.make  schism.mk
src/compartments/: Makefile
src/components/: .gitignore  CMakeLists.txt  Makefile  README  benthic_filtration_component.F90  benthic_filtration_component.mk  benthos_component.F90  clm_netcdf_component.F90  cmaq_component.F90  constant_component.F90  constant_grid_component.F90  default_component.F90  dummy_component.F90  empty_component.F90  erosed_component.F90  esmf_fabm_0d_component.F90  esmf_fabm_sediment_component.F90  esmf_gotm_component.F90  fabm0d_component.F90  fabm_0d_component.F90  fabm_benthic_component.F90  fabm_pelagic_component.F90  fabm_sediment_component.F90  filtration_component.F90  filtration_component.markdown  filtration_component.mk  getm_component.F90  gotm_component.F90  grid_component.F90  grid_component.mk  hamsom_component.F90  info_component.F90  inout_component.F90  location_component.F90  netcdf_component.F90  netcdf_component.markdown  netcdf_input_component.F90  netcdf_input_component.markdown  oasis_component.F90  particle_component.F90  (+11 more)
src/config/: benthic_filtration.cfg  benthic_filtration_component.yaml  gotm_component.yaml  test_component.yaml
src/connectors/: CMakeLists.txt  Makefile  Readme.md  flux_connector.F90  link_connector.F90  nudge_connector.F90  nudge_connector.markdown  rename_connector.F90  transport_connector.F90
src/drivers/: CMakeLists.txt  Macrofauna_interface.f90  Makefile  Mbalthica_class.f90  Microphytobenthos_class.f90  README  benthoseffect_class.F90  biotypes.F90  biotypes.f90  clm_driver.F90  cmaq_driver.F90  criticalsheareffect.F90  criticalsheareffect.f90  delft_erosed_driver.F90  delft_erosed_driver.f90  driver.F  empty_driver.F90  erodibilityeffect.F90  erodibilityeffect.f90  erosed_driver.F90  fabm0d_driver.F90  fabm_0d_driver.F90  fabm_benthic_driver.F90  fabm_gotm_driver.F90  fabm_pelagic_driver.F90  fabm_sediment_driver.F90  getm_driver.F90  hamsom_driver.F90  river_driver.F90  (+11 more)
(+744 files in other folders)
