# SPDX-FileCopyrightText 2022 Helmholtz-Zentrum Hereon
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor Carsten Lemmen <carsten.lemmen@hereon.de>

# Placeholder for examples CMake definitions
# This directory will contain example applications using the project's libraries.
# Example:
# add_executable(Example1 Example1.cpp)
# target_link_libraries(Example1 MyProject::MyLibrary)
