# SPDX-FileCopyrightText 2022 Helmholtz-Zentrum Hereon
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor Carsten Lemmen <carsten.lemmen@hereon.de>

# Placeholder for src CMake definitions
# Add subdirectories for components, connectors, drivers, mediators, test, and utilities
add_subdirectory(components)
add_subdirectory(connectors)
add_subdirectory(drivers)
add_subdirectory(include)
add_subdirectory(mediators)
add_subdirectory(test)
add_subdirectory(utilities)
