# SPDX-FileCopyrightText: 2025 Helmholtz-Zentrum hereon GmbH
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor: Carsten Lemmen <carsten.lemmen@hereon.de>

# Placeholder for src CMake definitions
# Add subdirectories for components, connectors, drivers, mediators, test, and utilities
add_subdirectory(include)
add_subdirectory(utilities)
add_subdirectory(drivers)
add_subdirectory(components)
add_subdirectory(connectors)
add_subdirectory(mediators)
add_subdirectory(test)
