# SPDX-FileCopyrightText 2022 Helmholtz-Zentrum Hereon
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor Carsten Lemmen <carsten.lemmen@hereon.de>

# Placeholder for src/components CMake definitions
# This directory will contain the source code for different components of the project.
# Example:
# add_library(MyComponent MyComponent.cpp)
# target_include_directories(MyComponent PUBLIC ../include)
