# SPDX-FileCopyrightText: 2025 Helmholtz-Zentrum hereon GmbH
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor: Carsten Lemmen <carsten.lemmen@hereon.de>

# Placeholder for src/connectors CMake definitions
# This directory will contain the source code for different connectors.
# Example:
# add_library(MyConnector MyConnector.cpp)
# target_include_directories(MyConnector PUBLIC ../include)
