# SPDX-FileCopyrightText: 2025 Helmholtz-Zentrum hereon GmbH
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor: Carsten Lemmen <carsten.lemmen@hereon.de>

# Placeholder for src/drivers CMake definitions
# This directory will contain the source code for different drivers.
# Example:
# add_library(MyDriver MyDriver.cpp)
# target_include_directories(MyDriver PUBLIC ../include)
