# SPDX-FileCopyrightText: 2025 Helmholtz-Zentrum hereon GmbH
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor: Carsten Lemmen <carsten.lemmen@hereon.de>

# Placeholder for src/mediators CMake definitions
# This directory will contain the source code for different mediators.
# Example:
# add_library(MyMediator MyMediator.cpp)
# target_include_directories(MyMediator PUBLIC ../include)
