# SPDX-FileCopyrightText 2022 Helmholtz-Zentrum Hereon
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor Carsten Lemmen <carsten.lemmen@hereon.de>

# Placeholder for src/test CMake definitions
# This directory will contain test code for the project.
# Example:
# add_executable(MyTest MyTest.cpp)
# target_link_libraries(MyTest MyProject::MyLibrary GTest::GTestMain)
# add_test(NAME MyTest COMMAND MyTest)
