# SPDX-FileCopyrightText 2022 Helmholtz-Zentrum Hereon
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileContributor Carsten Lemmen <carsten.lemmen@hereon.de>

# Placeholder for src/utilities CMake definitions
# This directory will contain utility code for the project.
# Example:
# add_library(MyUtility MyUtility.cpp)
# target_include_directories(MyUtility PUBLIC ../include)
